--- a/templates/main.html
+++ b/templates/main.html
@@ -73,9 +73,9 @@ function showResult2()
 
 <form action="/names" method="POST">   <!╌  http://www.gwdemo.net:8000/names, post ╌>
 <l>First Name: </l> <BR>
-<input type="text" name="first_name" value="fname"> <BR>
+<input type="text" name="first_name" value=""> <BR>
 <l>Last Name: </l> <BR>
-<input type="text" name="last_name" value="lname"> <BR>
+<input type="text" name="last_name" value=""> <BR>
 <input type="submit" value="Regular Post"> <BR>
 </form>
 <BR>
