--- a/templates/main.html
+++ b/templates/main.html
@@ -80,13 +80,13 @@ function showResult2()
 </form>
 <BR>
 
-<l>Whiteboard 1</l>
+<l>User ID</l>
 <div id="myDiv1" style="border: 1px solid green;">the result is:</div>
-<l>Whiteboard 2</l>
+<l>Age</l>
 <div id="myDiv2" style="border: 1px solid green;">the result is:</div>
-<l>Whiteboard 3</l>
+<l>Height (cm)</l>
 <div id="myDiv3" style="border: 1px solid green;">the result is:</div>
-<l>Whiteboard 4</l>
+<l>Weight (kg)</l>
 <div id="myDiv4" style="border: 1px solid green;">the result is:</div>
 <input type = "button" value = "AJAX Request, Get - getInfo1" onclick = "getInfo1()" />
                                        <!╌  http://www.gwdemo.net:8000/getinfo, get ╌>
