--- a/templates/main.html
+++ b/templates/main.html
@@ -76,6 +76,8 @@ function showResult2()
 <input type="text" name="first_name" value=""> <BR>
 <l>Last Name: </l> <BR>
 <input type="text" name="last_name" value=""> <BR>
+<l>Username: </l> <BR>
+<input type="text" name="Username" value=""> <BR>
 <input type="submit" value="Regular Post"> <BR>
 </form>
 <BR>
