--- a/templates/main.html
+++ b/templates/main.html
@@ -69,7 +69,7 @@ function showResult2()
 
 <body>
 
-<h1>Asynchronous JavaScript and XML</h1>
+<h1>Asynchronous JavaScript and XML (AJAX)</h1>
 
 <form action="/names" method="POST">   <!╌  http://www.gwdemo.net:8000/names, post ╌>
 <l>First Name: </l> <BR>
